diff-utils/src/snapshots/diff_utils__tests__bad_diff_test___nlorem_n_n_nipsum_n1_n2_n3_n4_n_nlorem_n_n_nipsun_n1_n2_n3_n4_n_.snap
---
source: diff-utils/src/lib.rs
expression: hunks
---
CompareResult {
    hunks: [
        Hunk {
            old_start: 1,
            new_start: 1,
            inserted: 7,
            removed: 7,
            lines: [
                Line {
                    kind: Unchanged,
                    inner: "Lorem ",
                    old_pos: Some(
                        1,
                    ),
                    new_pos: Some(
                        1,
                    ),
                },
                Line {
                    kind: Unchanged,
                    inner: "",
                    old_pos: Some(
                        2,
                    ),
                    new_pos: Some(
                        2,
                    ),
                },
                Line {
                    kind: Unchanged,
                    inner: "",
                    old_pos: Some(
                        3,
                    ),
                    new_pos: Some(
                        3,
                    ),
                },
                Line {
                    kind: ReplaceRemoved,
                    inner: "ipsum",
                    old_pos: Some(
                        4,
                    ),
                    new_pos: Some(
                        4,
                    ),
                },
                Line {
                    kind: ReplaceInserted,
                    inner: "ipsun",
                    old_pos: Some(
                        4,
                    ),
                    new_pos: Some(
                        4,
                    ),
                },
                Line {
                    kind: Unchanged,
                    inner: "1",
                    old_pos: Some(
                        5,
                    ),
                    new_pos: Some(
                        5,
                    ),
                },
                Line {
                    kind: Unchanged,
                    inner: "2",
                    old_pos: Some(
                        6,
                    ),
                    new_pos: Some(
                        6,
                    ),
                },
                Line {
                    kind: Unchanged,
                    inner: "3",
                    old_pos: Some(
                        7,
                    ),
                    new_pos: Some(
                        7,
                    ),
                },
            ],
        },
    ],
}
